k8s-yaml/devopswebui-dev-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH} 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}
  template:
    metadata:
      labels:
        app: ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}
    spec:
      imagePullSecrets:
      - name: harbor-63
      containers:
      - name: devopswebui
        image: ${CICD_IMAGE}:${CICD_GIT_BRANCH}-${CICD_GIT_COMMIT}
        ports:
        - containerPort: 80
