k8s-yaml/devopswebui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}-service
  labels: 
    app: ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}
spec:
  type: NodePort
  selector:
    app: ${CICD_GIT_REPO_NAME}-${CICD_GIT_BRANCH}
  ports:
    - name: webport
      protocol: TCP
      port: 80
