k8s-yaml/devopswebui-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: devopswebui-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-ssl-protocols: "TLSv1.3"
    nginx.ingress.kubernetes.io/ssl-prefer-server-ciphers: "true"
    nginx.ingress.kubernetes.io/ssl-ciphers: "EECDH+AESGCM:EDH+AESGCM"
spec:
  tls:
  - secretName: devopswebui-secret
  rules:
  #- host: 10.50.1.56
  - http:
      paths:
      - backend:
          serviceName: devopswebui-service
          servicePort: 80
